--- a/source/_posts/notes/代码可读性.md
+++ b/source/_posts/notes/代码可读性.md
@@ -9,7 +9,7 @@ tags:
 ---
 > 对软件来说，适当的规范和标准绝不是消灭代码内容的创造性、优雅性，而是限制过度个性化，以一种普遍认可的统一方式一起做事，提升协作效率。代码的字里行间流淌的是软件生命中的血液，质量的提升是尽可能少踩坑，杜绝踩重复的坑，切实提升质量意识。       ——《阿里巴巴开发手册》
 
-
+<!-- more -->
 ### 一致性
 
 不同开发者对同一事物会有不同的理解，因此对于关键业务名称的命名需要统一，使整个链路保持一致性。
