--- a/source/_posts/js/错误监控平台.md
+++ b/source/_posts/js/错误监控平台.md
@@ -18,6 +18,8 @@ tags:
 
 劣: 三方二次开发受限，部分需要上传源码到三方服务器，数据保存在第三方，费用不低；自研需要熟悉整套设计流程，对开发者要求较高，需要兼容各种场景以及耗时更久。
 
+<!-- more -->
+
 #### 二、异常收集
 
 常用的错误收集方法:
