--- a/source/_posts/js/错误监控平台.md
+++ b/source/_posts/js/错误监控平台.md
@@ -122,7 +122,7 @@ tags:
 1. sourceMap处理
 
    1. webpack-plugin的开发，利用钩子函数进行上传和删除操作
-
+   
    ```javascript
    import request from 'request-promise'
    import fs from 'fs'
@@ -242,9 +242,9 @@ tags:
    }
    
    ```
-
+   
    2. nodejs -- 借助`multer`进行文件上传，后面考虑迁移cos进行持久化保存
-
+   
    ```javascript
    const storage = multer.diskStorage({
      destination: function (req, file, cb) {
@@ -329,9 +329,30 @@ tags:
    });
    
    ```
-
-   3. 借助`source-map-js`在可视化项目中解析map文件
-
+   
+   3. vue开启`SourceMap`，挂载`webpack`插件
+   
+   ```javascript
+   // vue.config.js
+   const UploadSourceMapPlugin = require('@bestjarvan/webpack-upload-sourcemap-plugin');
+   
+   const plugins = []
+   isProd && plugins.push(UploadSourceMapPlugin({
+     baseURL: process.env.VUE_APP_UPLOAD_API,
+     deleteAfterCompile: true
+   }))
+   
+   // 根据自己需求选择是否开启source-map
+   module.exports = {
+   	configureWebpack: {
+   		devtool: isProd ? 'source-map' : 'none',
+       plugins,
+   	}
+   }
+   ```
+   
+   4. 借助`source-map-js`在可视化项目中解析map文件
+   
    ```javascript
    function findCodeInfo() {
      // fetchMapFile 获取map文件接口 /getMap/:project
@@ -347,7 +368,7 @@ tags:
    }
    
    ```
-
+   
    ![list](https://fastly.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/image-20240311173917245.png)
 
 ![info](https://fastly.jsdelivr.net/gh/BestJarvan/pic-imgs/imgs/image-20240311173808686.png)
